--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
           </div>
         </div>
       </section>
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img src="./content/img/logos/techcrunch.png" alt="Techcrunch" />
+            <img src="./content/img/logos/forbes.png" alt="Forbes" />
+            <img
+              src="./content/img/logos/business-insider.png"
+              alt="Business insidet"
+            />
+            <img
+              src="./content/img/logos/the-new-york-times.png"
+              alt="The New Yourk Times"
+            />
+            <img src="./content/img/logos/usa-today.png" alt="USA Today" />
+          </div>
+        </div>
+      </section>
       <section class="section-how">
         <div class="container">
           <span class="subheading">How it works</span>
