--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             Eating well without breaking the bank
           </h2>
         </div>
-        <div class="container grid grid-2-cols">
+        <div class="container grid grid-2-cols margin-bottom-md">
           <div class="pricing-plan pricing-plan-starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
@@ -478,11 +478,98 @@
             </div>
           </div>
         </div>
+        <div class="container grid">
+          <aside class="plan-details">
+            Prices include all applicable taxes. Users can cancel at any time.
+            Both plans include the following:
+          </aside>
+        </div>
         <div class="container grid grid-4-cols">
-          <div class="feature">Feature</div>
-          <div class="feature">Feature</div>
-          <div class="feature">Feature</div>
-          <div class="feature">Feature</div>
+          <div class="feature">
+            <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+            <p class="feature-title">Never cook again!</p>
+            <p class="feature-text">
+              Our subsctiptions cover 365 days per year, even including major
+              holidays.
+            </p>
+          </div>
+          <div class="feature">
+            <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
+            <p class="feature-title">Local and organic</p>
+            <p class="feature-text">
+              Our cooks only use local, fresh, and organic products to prepare
+              your meals.
+            </p>
+          </div>
+          <div class="feature">
+            <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
+            <p class="feature-title">No waste</p>
+            <p class="feature-text">
+              All our partners only use reusable containers to package all your
+              meals.
+            </p>
+          </div>
+          <div class="feature">
+            <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
+            <p class="feature-title">Pause anytime</p>
+            <p class="feature-text">
+              Going on vacation? Just pause your subscription, and we refund
+              unused days.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">Get your first meal for free!</h2>
+              <p class="cta-text">
+                Healthy, tasty and hassle-free meals are waiting for you. Start
+                eating well today. You can cancel or pause anytime. And the
+                first meal is on us!
+              </p>
+              <form class="cta-form" action="#">
+                <div>
+                  <label for="full-name">Full name</label>
+                  <input
+                    required
+                    id="full-name"
+                    type="text"
+                    placeholder="John Smith"
+                  />
+                </div>
+                <div>
+                  <label for="email">Email addres</label>
+                  <input
+                    required
+                    id="email"
+                    type="email"
+                    placeholder="me@exapmle.com"
+                  />
+                </div>
+                <div>
+                  <label for="select-where">Where did you hear from us?</label>
+                  <select required name="" id="select-where">
+                    <option value="empty">Please choose one option:</option>
+                    <option value="friends">Friends and family</option>
+                    <option value="youtube video">YouTube video</option>
+                    <option value="podcast">Podcast</option>
+                    <option value="facebook">Facebook ad</option>
+                  </select>
+                </div>
+
+                <button class="btn btn-form">Sign up now</button>
+                <!-- <input type="checkbox" />
+              <input type="number" /> -->
+              </form>
+            </div>
+            <div
+              class="cta-image-box"
+              role="img"
+              aria-label="Woman enjoying food"
+            ></div>
+          </div>
         </div>
       </section>
     </main>
