--- a/index.html
+++ b/index.html
@@ -608,7 +608,8 @@
             </li>
           </ul>
           <p class="copyright">
-            Copyright &copy; 2027 by Omnifood Inc. All right reserved.
+            Copyright &copy; <span class="year">2027</span> by Omnifood Inc. All
+            right reserved.
           </p>
         </div>
         <div class="address-col">
