--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <header class="header">
       <a href="#">
         <img
+          href="#"
           class="logo"
           src="./content/img/omnifood-logo.png"
           alt="Omnifood logo"
@@ -26,11 +27,13 @@
 
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li>
+            <a class="main-nav-link" href="#testimonials">Testimonials</a>
+          </li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
       <button class="btn-mobile-nav">
@@ -50,10 +53,10 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs. We have delivered 250,000+ meals last year!
             </p>
-            <a href="#" class="btn btn-full margin-right-small"
+            <a href="#cta" class="btn btn-full margin-right-small"
               >Start eating well</a
             >
-            <a href="#" class="btn btn-outlined">Learn more &darr;</a>
+            <a href="#how" class="btn btn-outlined">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img
@@ -113,7 +116,7 @@
           </div>
         </div>
       </section>
-      <section class="section-how">
+      <section id="how" class="section-how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -178,7 +181,7 @@
           </div>
         </div>
       </section>
-      <section class="section-meals">
+      <section id="meals" class="section-meals">
         <div class="container center-text">
           <span class="subheading">meals</span>
           <h2 class="heading-secondary">
@@ -289,7 +292,7 @@
           <a href="#" class="link">See all recipes &rarr;</a>
         </div>
       </section>
-      <section class="section-testimonials">
+      <section id="testimonials" class="section-testimonials">
         <div class="testimonials-container">
           <span class="subheading">testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back!</h2>
@@ -420,7 +423,7 @@
           </figure>
         </div>
       </section>
-      <section class="section-pricing">
+      <section id="pricing" class="section-pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
@@ -527,7 +530,7 @@
           </div>
         </div>
       </section>
-      <section class="section-cta">
+      <section id="cta" class="section-cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -586,6 +589,7 @@
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img
+              href="#"
               class="logo"
               src="./content/img/omnifood-logo.png"
               alt="Omnifood logo"
@@ -664,6 +668,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
