--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Omnifood is an AI powered food subscription that will make you eat healthy again, 365 365 days per year. It's tailored to your personal tastes and nutritional needs."
+    />
+    <link rel="icon" href="content//img/favicon.png" />
+    <link rel="apple-touch-icon" href="content//img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +20,7 @@
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/queries.css" />
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook again</title>
   </head>
   <body>
     <header class="header">
@@ -53,7 +60,7 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs. We have delivered 250,000+ meals last year!
             </p>
-            <a href="#cta" class="btn btn-full margin-right-small"
+            <a href="#cta" class="btn btn-full margin-right-small mb-md"
               >Start eating well</a
             >
             <a href="#how" class="btn btn-outlined">Learn more &darr;</a>
@@ -90,11 +97,25 @@
             </div>
           </div>
           <div class="hero-image-box">
-            <img
+            <picture>
+              <source srcset="content/img/hero.webp" type="image/webp" />
+              <source srcset="./content/img/hero.png" type="image/png" />
+              <img
+                class="hero-img"
+                src="./content/img/hero.png"
+                alt="Woman enjoing food, meals in storge container and food bowls on a table"
+              />
+            </picture>
+            <!-- <img
               src="./content/img/hero.png"
               alt="Woman enjoing food, meals in storge container and food bowls on a table"
               class="hero-img"
             />
+            <img
+              src="./content/img/hero.webp"
+              alt="Woman enjoing food, meals in storge container and food bowls on a table"
+              class="hero-img"
+            /> -->
           </div>
         </div>
       </section>
